# First-Ml-FastAPi-experience

./: .gitignore  README.md  bad_words_model.pkl  generate.py  main.py  model.py  pyproject.toml  requirements.txt  train_data.db
src/bad_word/: main.py
static/: styles.css
templates/: index.html
tests/: test_main.py
