[project]
name = "bad-word"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmytro",email = "pytakdima@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn (>=1.7.1,<2.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
]

[tool.poetry]
packages = [{include = "bad_word", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
